--- a/trabalhoP2/Coisas_fixes.html
+++ b/trabalhoP2/Coisas_fixes.html
@@ -13,3 +13,17 @@ Negrito, itálico...
 <b>Meu texto em negrito</b> 
 <i>Meu texto em itálico</i> 
 <u>Meu texto em sublinhado</u> 
+
+Listas não numeradas
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+
+Listas numeradas
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
