--- a/trabalhoP2/Coisas_fixes.html
+++ b/trabalhoP2/Coisas_fixes.html
@@ -1,7 +1,7 @@
-Tamanho
+<li>Tamanho</li>
 <font size="6">This is some text!</font> 
 
-Headers
+<li>Headers</li>
 <h1>This is heading 1</h1>
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
@@ -9,19 +9,20 @@ Headers
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
 
-Negrito, itálico...
+<li>Negrito, itálico...</li>
 <b>Meu texto em negrito</b> 
 <i>Meu texto em itálico</i> 
 <u>Meu texto em sublinhado</u> 
 
-Listas não numeradas
+
+<li>Listas não numeradas</li>
 <ul>
   <li>Coffee</li>
   <li>Tea</li>
   <li>Milk</li>
 </ul>
 
-Listas numeradas
+<li> Listas numeradas </li>
 <ol>
   <li>Coffee</li>
   <li>Tea</li>
