--- a/trabalhoP2/Coisas_fixes.html
+++ b/trabalhoP2/Coisas_fixes.html
@@ -28,3 +28,23 @@
   <li>Tea</li>
   <li>Milk</li>
 </ol>
+
+<li> Listas descritivas </li>
+ <dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>- white cold drink</dd>
+</dl> 
+
+<li> Listas de listas </li>
+ <ul>
+  <li>Coffee</li>
+  <li>Tea
+    <ul>
+      <li>Black tea</li>
+      <li>Green tea</li>
+    </ul>
+  </li>
+  <li>Milk</li>
+</ul> 
