--- a/trabalhoP2/Coisas_fixes.html
+++ b/trabalhoP2/Coisas_fixes.html
@@ -1,7 +1,7 @@
 <li>Tamanho</li>
 <font size="6">This is some text!</font> 
 
-<li>Headers</li>
+<li>Headers em HTML</li>
 <h1>This is heading 1</h1>
 <h2>This is heading 2</h2>
 <h3>This is heading 3</h3>
@@ -9,11 +9,14 @@
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
 
+
+\IN<  1 hj   >  1\<2
+
 <li>Negrito, itálico...</li>
 <b>Meu texto em negrito</b> 
 <i>Meu texto em itálico</i> 
 <u>Meu texto em sublinhado</u> 
-
+<u><b>Meu texto em negrito</b></u>
 
 <li>Listas não numeradas</li>
 <ul>
