--- a/trabalhoP2/Coisas_fixes.html
+++ b/trabalhoP2/Coisas_fixes.html
@@ -1,3 +1,19 @@
+
+Notas, como planeamos:
+
+	- para a formatação ( \Simbolo< texto > Simbolo: b, u, i, h1-6 )
+	
+	- listas de topicos ( \Simbolo< item1 | item2 | ... > Simbolo: ul, ol )
+			    ( \dl< key1 $ val1 | key2 $ val3 | ... > )
+
+
+
+
+
+
+
+
+
 <li>Tamanho</li>
 <font size="6">This is some text!</font> 
 
@@ -8,9 +24,6 @@
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
-
-
-\IN<  1 hj   >  1\<2
 
 <li>Negrito, itálico...</li>
 <b>Meu texto em negrito</b> 
