--- a/trabalhoP2/ex.html
+++ b/trabalhoP2/ex.html
@@ -3,7 +3,7 @@
 <h2> Sub-Titulo </h2>
 
 <ul><li>
-	Quando se faz <b>negrito</b> o simbolo é b.</li>
+	Quando se faz <b>negrito 2>3</b> o simbolo é b.</li>
 <li>
 	Quando se faz <i>itálico</i> o simbolo é i.</li>
 <li>
