confirmar se esta tudo na pasta zip, ler o relatorio para ver se nao ha erros ortograficos

--- a/trabalhoP2/ex.html
+++ b/trabalhoP2/ex.html
@@ -3,7 +3,7 @@
 <h2> Sub-Titulo </h2>
 
 <ul><li>
-	Quando se faz <b>negrito 2>3</b> o simbolo é b.</li>
+	Quando se faz <b>negrito</b> o simbolo é b.</li>
 <li>
 	Quando se faz <i>itálico</i> o simbolo é i.</li>
 <li>
@@ -11,9 +11,9 @@
 </li></ul>
 
 <ol><li>
-	Quando se faz <b>negrito</b> o simbolo : b.</li>
+	Quando se faz <b>negrito</b> o simbolo  b.</li>
 <li>
-	Quando se faz <i>itálico</i> o simbolo $ i.</li>
+	Quando se faz <i>itálico</i> o simbolo  i.</li>
 <li>
 	Quando se faz <u>sublinhado</u> o simbolo | u.
 </li></ol>
@@ -28,5 +28,11 @@
 	<u>sublinhado</u> </dt>
 <dd> u
 </dd></dl>
+
+
+Uma expressão matemática a negrito</dt>
+<dd>
+<b> 3> 1</b>
+
 
 <h3> The End Folks </h3>
