--- a/trabalhoP2/ex.html
+++ b/trabalhoP2/ex.html
@@ -8,6 +8,11 @@
 	Quando se faz <i>itálico</i> o simbolo é i.</li>
 <li>
 	Quando se faz <u>sublinhado</u> o simbolo é u.
+	<ul><li>coisas</li>
+<li>1</li>
+<li>2</li></ul></li>
+<li>
+	ola
 </li></ul>
 
 <ol><li>
@@ -16,6 +21,12 @@
 	Quando se faz <i>itálico</i> o simbolo  i.</li>
 <li>
 	Quando se faz <u>sublinhado</u> o simbolo | u.
+	<ol><li>coisas</li>
+<li>1</li>
+<li>2</li></ol> </li>
+<li>
+	ola
+
 </li></ol>
 
 <dl><dt>
